Creacion de la venta corregisa, realizando pruebas de las validaciona es descuento de valir de inventario